2002-09-26  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-current-menu): added.  to allow cycling through
	several smaller menus, instead of always having one big menu.
	(tnt-buddy-list-mode-map): added "u" for tnt-next-menu.
	(tnt-next-menu): added.  cycles through menus.
	(tnt-buddy-list-menu): split up the one big menu into several
	smaller menus.
	(tnt-push-event): when adding an event to the ring, automatically
	switch to the menu that includes "[a]ccept message".

2002-09-26  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-unset-login-flag): now works in xemacs.  basically
	we just set the timer to run right away, the same way it wrongly
	does anyway in xemacs; and the trick is we also set it as a
	repeating timer, but the second time it runs, it actually does
	what it needs to do and then disables itself.
	(tnt-login-flag-unset-ran-once): added.
	(tnt-shutdown): reset the vars related to the login-flag.
	(tnt-handle-sign-on): set timer repeating.

2002-09-25  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el -- toggle inactive (offline) buddies
	(tnt-show-inactive-buddies-now): added.  this gets set at login
	time to whatever the user generally prefers, but then can be
	easily toggled.
	(tnt-buddy-list-filter): use -now instead of general pref.
	(tnt-handle-nick): initialize -now based on general pref.
	(tnt-toggle-inactive-buddies): added.
	(tnt-buddy-list-mode-map): added "O" to toggle offline buddies.

	* tnt.el -- buddy list menu
	(tnt-buddy-list-menu): added.  dynamically builds a menu of
	available commands.
	(tnt-build-buddy-buffer): added call to tnt-buddy-list-menu.
	(tnt-switch-user): added call to tnt-build-buddy-buffer.
	(tnt-toggle-email): added call to tnt-build-buddy-buffer.
	(tnt-toggle-mute): added call to tnt-build-buddy-buffer.

2002-09-25  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-toggle-mute): rename from tnt-mute.
	(tnt-toggle-away): rename from tnt-away-toggle.