@@ -1,5 +1,15 @@
 2002-09-26  NeilFred Picciotto  <fred@halfshell.halflab.com>
 
+	* tnt.el (tnt-buddy-list-menu): put "-----" line above the menu.
+	(tnt-buddy-list-menu-line): added.  return location of the "-----"
+	menu line.
+	(tnt-get-buddy-at-point): no buddies after menu line.
+	(tnt-next-buddy): no buddies after menu line.
+	(tnt-buddy-list-filter): include offline buddies with pounce.
+	(tnt-im-buddy): if buddy is offline, offer to toggle their pounce.
+
+2002-09-26  NeilFred Picciotto  <fred@halfshell.halflab.com>
+
 	* tnt.el (tnt-current-menu): added.  to allow cycling through
 	several smaller menus, instead of always having one big menu.
 	(tnt-buddy-list-mode-map): added "u" for tnt-next-menu.
